2025-12-23 27a
  * fix ICU data (bug #33)
  * BARControl: add show hidden button (feature #23)

2025-12-06 27
  * added option --commmand-timeout
  * fixed command timeout (bug #31)
  * added sd_notify() for systemd
  * support EXFAT file system
  * support XFS file system
  * be really quiet on console if --quiet is set
  * bar-index: improved clean-orphaned: remove entities without
    entries or storages
  * added spare support for restoring images
  * renamed option --sparse-files -> --sparse
  * upgrade xz 5.8.1
  * upgrade lz4 1.10.0
  * upgrade zstd 1.5.7
  * upgrade gpg-error 1.56
  * upgrade gcrypt 1.11.2
  * upgrade gpm 6.3.0
  * upgrade idn2 2.3.8
  * upgrade GNU TLS 3.8.10
  * upgarde iconv 1.18
  * upgrade OpenSSL 3.6.0
  * upgarde ssh2 1.11.1
  * upgrade c-ares 1.34.5
  * upgrade curl 8.16.0
  * upgrade SQlite 3.50.4
  * upgrade MariaDB client 3.4.7
  * upgrade PostgreSQL connector 18.0
  * upgrade Kerberos 1.22.1
  * upgrade SMB2 2.6.2
  * upgarde util-linux 2.41.1
  * upgrade binutils 2.45
  * upgrade PAR2 1.0.0
  * dropped support for AlmaLinux 8.10
  * BARControl: improved certificate validation
  * BARControl: show file system type of devices if possible
  * BARControl: check common name of SSL certificate
  * BARControl: show also /dev/mapper devices in device list

2025-06-29 26
  * automatic replace deprecated configuration values by new value
  * support libsmb2 for Windows port
  * increased test code coverage
  * fixed some memory leaks
  * fixed handling optional command line options (isSet-operator)
  * fixed error handling when deleting .nobackup
  * upgraded SQLite to 3.49.1
  * bar-index: add option --purge-with-error
  * bar-index: renamed options --create-indizes, create-fts-indizes,
    drop-indizes
  * BACControl: upgrade to Java 1.7
  * BARControl: add total progress to test dialog
  * BARControl: add general commands to server settings dialog
  * BARControl: show busy dialog when deleting storages